[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/MainScenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assests/Menu/play.png" type="Texture" id=2]
[ext_resource path="res://Assests/Menu/options.png" type="Texture" id=3]
[ext_resource path="res://Assests/Menu/play-hover.png" type="Texture" id=4]
[ext_resource path="res://Assests/Menu/options-clicked.png" type="Texture" id=5]
[ext_resource path="res://Assests/Menu/quit-clicked.png" type="Texture" id=6]
[ext_resource path="res://Assests/Menu/quit.png" type="Texture" id=7]
[ext_resource path="res://Assests/Menu/options-hover.png" type="Texture" id=8]
[ext_resource path="res://Assests/Menu/play-clicked.png" type="Texture" id=9]
[ext_resource path="res://Assests/Menu/quit-hover.png" type="Texture" id=10]
[ext_resource path="res://Assests/Menu/dough.png" type="Texture" id=11]
[ext_resource path="res://Assests/Menu/shoot.png" type="Texture" id=12]
[ext_resource path="res://Assests/Menu/not.png" type="Texture" id=13]
[ext_resource path="res://Assests/Menu/background.png" type="Texture" id=14]
[ext_resource path="res://Assests/Menu/looking1.png" type="Texture" id=15]
[ext_resource path="res://Assests/Menu/looking3.png" type="Texture" id=16]
[ext_resource path="res://Assests/Menu/looking2.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "looking"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("looking:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -2.0
margin_right = 7.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
self_modulate = Color( 0.341176, 0.294118, 0.294118, 1 )
position = Vector2( 515, 292 )
scale = Vector2( 0.277771, 0.277771 )
texture = ExtResource( 14 )

[node name="dough" type="Sprite" parent="."]
position = Vector2( 277, 106 )
scale = Vector2( 0.558868, 0.558869 )
texture = ExtResource( 11 )

[node name="notWord" type="Sprite" parent="."]
position = Vector2( 748, 102 )
scale = Vector2( 0.586758, 0.586758 )
texture = ExtResource( 13 )

[node name="shoot" type="Sprite" parent="."]
position = Vector2( 500, 249 )
scale = Vector2( 0.469643, 0.469643 )
texture = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -624.0
margin_top = 340.0
margin_right = 554.0
margin_bottom = 1575.0
rect_scale = Vector2( 0.176, 0.166 )

[node name="FindGame" type="TextureButton" parent="VBoxContainer"]
margin_right = 848.0
margin_bottom = 395.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 4 )

[node name="Options" type="TextureButton" parent="VBoxContainer"]
margin_top = 399.0
margin_right = 1178.0
margin_bottom = 836.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )

[node name="Quit" type="TextureButton" parent="VBoxContainer"]
margin_top = 840.0
margin_right = 1178.0
margin_bottom = 1235.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 10 )

[node name="TestGame" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 81.0
text = "Test Game"

[node name="looking" type="Sprite" parent="."]
visible = false
position = Vector2( 478, 293 )
scale = Vector2( 0.595361, 0.595361 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/looking = SubResource( 1 )

[connection signal="focus_entered" from="VBoxContainer/FindGame" to="." method="_on_FindGame_focus_entered"]
[connection signal="pressed" from="VBoxContainer/FindGame" to="." method="_on_FindGame_pressed"]
[connection signal="pressed" from="TestGame" to="." method="_on_TestGame_pressed"]
